whoami/01-whoami-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: whoami
spec:
    selector:
        matchLabels:
            app: whoami
    template:
        metadata:
            labels:
                app: whoami
        spec:
            containers:
                - name: whoami
                  image: traefik/whoami
