whoami/03-whoami-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: whoami-route
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: traefik
    hostnames:
        - "whoami.kerrlab.app"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              # Use backendRefs for Gateway API v1beta1
              - name: whoami
                port: 80
